# tent-a42d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_aux.h  game_aux_test.c  game_ext.c  game_ext.h  game_private.c  game_private.h  game_solve.c  game_struct.h  game_test.c  game_test_bjgiraud  game_test_bjgiraud.c  game_test_edatrier  game_test_edatrier.c  game_test_mlecoeuvre  game_test_mlecoeuvre.c  game_test_onangeko.c  game_text  game_text.c  game_tools.c  game_tools.h  main.c  model.c  queue.c  queue.h  salut.txt
Testing/Temporary/: CTestCostData.txt
android/: AndroidManifest.xml  README.md  build.xml  cleanall.sh  cremi-env.sh  download.sh  env.sh  init-cremi.sh
android/jni/: Application.mk
android/jni/src/: Android.mk  Makefile  README.txt  demo.c  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_tools.c  game_tools.h  main.c  model.c  model.h  queue.c  queue.h
android/src/org/libsdl/app/: SDLActivity.java
